[gd_scene load_steps=5 format=3 uid="uid://b6jtpbym5bw26"]

[ext_resource type="Texture2D" uid="uid://dp25fkcrleu0p" path="res://Images/level1.png" id="1_1ehe0"]
[ext_resource type="Script" uid="uid://d0nyl0uc7onis" path="res://Scripts/level_navigator.gd" id="1_ce3w2"]
[ext_resource type="Texture2D" uid="uid://lqtehg2qi4ad" path="res://Images/level2.png" id="2_ce3w2"]
[ext_resource type="Texture2D" uid="uid://dmufhjir75qpn" path="res://Images/level3.png" id="3_n45e2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 175.0
grow_horizontal = 2

[node name="Label" type="Label" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 128
text = "Select level"
horizontal_alignment = 1

[node name="Levels" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 112.0
offset_top = 256.0
offset_right = 2064.0
offset_bottom = 640.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
columns = 3
script = ExtResource("1_ce3w2")

[node name="Button" type="Button" parent="Levels"]
layout_mode = 2
icon = ExtResource("1_1ehe0")

[node name="Button2" type="Button" parent="Levels"]
layout_mode = 2
icon = ExtResource("2_ce3w2")

[node name="Button3" type="Button" parent="Levels"]
layout_mode = 2
icon = ExtResource("3_n45e2")

[connection signal="pressed" from="Levels/Button" to="Levels" method="_on_button_pressed"]
[connection signal="pressed" from="Levels/Button2" to="Levels" method="_on_button_2_pressed"]
[connection signal="pressed" from="Levels/Button3" to="Levels" method="_on_button_3_pressed"]
